--- a/styles/blocks/button/button.scss
+++ b/styles/blocks/button/button.scss
@@ -1,5 +1,6 @@
 .button {
   cursor: pointer;
+  color: $black-font;
   border: 2px solid #000000;
   border-radius: 9999px;
   min-width: 169px;
